2000-06-30  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* gc.c (scm_gc_for_newcell): Behave gracefully also if scm_igc
	doesn't yield any new cells.  In theory this could happen if all
	cells allocated with NEWCELL are either in use or conservatively
	marked and all cluster spine cells are conservatively marked.
	(Thanks to Dirk.)

2000-06-29  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* __scm.h (SCM_NALLOC):  Removed.

	* error.c (scm_wta):  Removed sick dispatch code for memory
	errors.  (More sick dispatches still to be removed.)

	* numbers.c (scm_mkbig, scm_adjbig), ports.c (scm_make_port_type),
	random.c (scm_i_copy_rstate, scm_c_make_rstate), smob.c
	(scm_make_smob_type), srcprop.c (scm_make_srcprops), vectors.c
	(scm_vector_set_length_x):  Now using scm_memory_error to signal
	memory errors.

2000-06-29  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* __scm.h:  Removed some commented code and fixed some comments.

	(SCM_HUP_SIGNAL, SCM_INT_SIGNAL, SCM_FPE_SIGNAL, SCM_BUS_SIGNAL,
	SCM_SEGV_SIGNAL, SCM_ALRM_SIGNAL, SCM_GC_SIGNAL, SCM_TICK_SIGNAL,
	SCM_SIG_ORD, SCM_ORD_SIG, SCM_NUM_SIGS):  Removed.

	* async.c:  Removed some commented code.

2000-06-29  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* gc.c (scm_gc_mark, scm_gc_sweep, scm_must_malloc,
	scm_must_realloc, scm_must_free, alloc_some_heap):  Use the
	appropriate error signalling function.

2000-06-29  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* root.h (scm_first_type):  Removed.

2000-06-29  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* gc.c (MIN_GC_YIELD):  Removed.

2000-06-28  Michael Livshin  <mlivshin@bigfoot.com>

	* gc.c (scm_gc_for_newcell): don't try to do GC if it's blocked,
	allocate instead.

2000-06-28  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* async.c (scm_gc_async, scm_gc_vcell, scm_sys_gc_async_thunk):
	Moved to gc.c.

	(scm_init_async):  Moved initialization for scm_gc_async and
	scm_gc_vcell to gc.c.  Moved initialization of scm_asyncs here
	from gc.c.

	* async.h (scm_gc_async):  Not globally visible any more.