@@ -1,3 +1,14 @@
+2000-06-30  Dirk Herrmann  <D.Herrmann@tu-bs.de>
+
+	* validate.h (SCM_VALIDATE_INUM_MIN_COPY,
+	SCM_VALIDATE_INUM_MIN_DEF_COPY, SCM_VALIDATE_INUM_RANGE_COPY):
+	Perform all range checks based on the input value.  The former way
+	of using the value that is assigned to the target variable fails
+	if the assignment to the target variable itself can change the
+	value because of type conversion.
+
+	(SCM_ASSERT_RANGE):  Use scm_out_of_range to signal range errors.
+
 2000-06-30  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>
 
 	* gc.c (scm_gc_for_newcell): Behave gracefully also if scm_igc
